<resources>
    <string name="app_name">Friendly</string>
    <string name="home">Home</string>
    <string name="post_status">Post Status</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="friendly">Friendly</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_password_error">pick a different username or password</string>
    <string name="user_password_incorrect">username or password is incorrect</string>


    <string name="description">Description</string>
    <string name="search2">Search&#8230;</string>
    <string name="end_time">End Time</string>
    <string name="log_out">Log Out</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="update_status">Update Status</string>

    <string name="removed_friend">%1$s was removed from your friends list</string>
    <string name="added_friend">%1$s was added to your friends list</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="request_sent">%1$s was sent a friend request</string>

    <string name="just_now">just now</string>
    <string name="picture_not_taken">Picture wasn\'t taken!</string>

    <string name="loading">Loading&#8230;</string>
    <string name="wait">Please wait.</string>
    <string name="confirm_remove">Are you sure you want to remove %1$s from your friends list?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="time_range">Now - %1$s</string>
    <string name="location">%1$s, %2$s</string>

    <string name="delete_status">Delete Status</string>
    <string name="confirm_delete">Are you sure you want to delete this status?</string>
    <string name="location_text">Location</string>
    <string name="start_time">Start Time</string>

    <string name="post_warning">Please enter an end time and location.</string>
    <string name="ok">OK</string>

    <string name="snack_bar_text">This friend request has been deleted.</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_wait">Please wait&#8230;</string>
</resources>